menambahkan fitur dark mode

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,11 @@
         <header>
             <h1>TaskMaster <i class="fas fa-check-circle"></i></h1>
             <p>Kelola tugas-tugas Anda dengan mudah</p>
+            <div class="theme-toggle">
+                <button id="themeToggle" title="Ubah Tema">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
         </header>
         
         <div class="task-form">
